# ai-search-mcp

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  config.example.json  docker-compose.yml  docker-start.ps1  docker-start.sh  pyproject.toml
.github/workflows/: build-and-publish.yml  publish.yml
ai_search_mcp/: __init__.py  cli.py  client.py  config.py  deploy.py  exceptions.py  post_install.py  server.py  utils.py
scripts/: auto-deploy.ps1  auto-deploy.sh  install.ps1  install.sh  post-install.py
src/: client.rs  config.rs  config_file.rs  config_ui.rs  daemon.rs  error_codes.rs  handlers.rs  http_server.rs  lib.rs  main.rs  mcp_handler.rs  mcp_sse.rs  middleware.rs  models.rs  sse.rs  stdio_handler.rs
web/: index.html  login.html  script.js  style.css
