[package]
name = "ai-search-mcp"
version = "1.3.0"
edition = "2021"
authors = ["lianwusuoai"]
description = "通用 AI 搜索 MCP 服务器，支持任何兼容 OpenAI API 格式的 AI 模型"
license = "MIT"
repository = "https://github.com/lianwusuoai/ai-search-mcp"

[lib]
name = "ai_search_mcp"
path = "src/lib.rs"

[[bin]]
name = "ai-search-mcp"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
once_cell = "1"
chrono = "0.4"
thiserror = "1"
futures = "0.3"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
# 文件锁支持
fs2 = "0.4"
# HTTP/SSE 依赖
axum = "0.7"
axum-extra = { version = "0.9", features = ["cookie"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "limit"] }
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
tokio-stream = "0.1"
dirs = "5.0"
rust-embed = "8.0"
time = "0.3"

[dev-dependencies]
proptest = "1.4"
tokio-test = "0.4"
axum-test = "14.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
