[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-search-mcp"
version = "1.0.0"
description = "通用 AI 搜索 MCP 服务器,支持任何兼容 OpenAI API 格式的 AI 模型"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "lianwusuoai"}
]
keywords = ["mcp", "ai", "search", "openai", "grok"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/lianwusuoai/ai-search-mcp"
Repository = "https://github.com/lianwusuoai/ai-search-mcp"
Issues = "https://github.com/lianwusuoai/ai-search-mcp/issues"
Documentation = "https://github.com/lianwusuoai/ai-search-mcp#readme"

[project.optional-dependencies]
yaml = ["pyyaml>=6.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
    "hypothesis>=6.0",
    "black>=23.0",
    "isort>=5.12",
    "mypy>=1.0",
    "types-requests>=2.31.0",
]

[project.scripts]
ai-search-mcp = "ai_search_mcp.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["ai_search_mcp"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=ai_search_mcp --cov-report=term-missing"
