[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-search-mcp"
dynamic = ["version"]
description = "通用 AI 搜索 MCP 服务器，支持任何兼容 OpenAI API 格式的 AI 模型"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "lianwusuoai"}
]
keywords = ["mcp", "ai", "search", "openai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/lianwusuoai/ai-search-mcp"
Repository = "https://github.com/lianwusuoai/ai-search-mcp"
Issues = "https://github.com/lianwusuoai/ai-search-mcp/issues"

[project.scripts]
ai-search-mcp = "ai_search_mcp:main"
ai-search-mcp-deploy = "ai_search_mcp.deploy:main"

[tool.hatch.version]
path = "ai_search_mcp/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["ai_search_mcp"]

[tool.hatch.build.targets.wheel.force-include]
"ai_search_mcp/bin" = "ai_search_mcp/bin"

[tool.hatch.build.targets.sdist]
include = [
    "/ai_search_mcp",
    "/src",
    "/Cargo.toml",
    "/Cargo.lock",
    "/README.md",
    "/LICENSE",
]
